# mloader

./: .gitignore  CMakeLists.txt  README.md  TODO  settings.gradle
app/: build.gradle
app/src/main/java/com/github/mlogic1/dashboardface/: DashboardFaceRenderer.java  MyWatchFace.java  WatchCallbacks.kt
app/src/main/java/com/github/mlogic1/dashboardface/Interface/: IFaceRenderer.java
app/src/main/res/values/: strings.xml
cli/: ActionResult.h  CMakeLists.txt  GameListMenu.cpp  GameListMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  main.cpp
gradle/wrapper/: gradle-wrapper.properties
gtk/: CMakeLists.txt
gtk/data/: mloader-gtk-resources.xml  mloader.desktop
gtk/data/layouts/: grid_view_element.ui  layout_about.glade  layout_main.glade  layout_splash.glade  layout_standalone.glade
gtk/script/: update_gtk_resources.sh
gtk/src/: AboutWindow.cpp  AboutWindow.h  GtkGeneric.cpp  GtkGeneric.h  MainWindow.cpp  MainWindow.h  SplashWindow.cpp  SplashWindow.h  StandaloneWindow.cpp  StandaloneWindow.h  main.cpp
gtk/src/model/: DeviceDetails.h
gtk/src/resource/: mloader_gtk_resources.c
libmloader/: CMakeLists.txt
libmloader/include/mloader/: AdbDevice.h  App.h  AppContext.h  SAContext.h  VrpApp.h
libmloader/src/: 7z.cpp  7z.h  ADB.cpp  ADB.h  AdbDevice.cpp  AdbDeviceImpl.h  AppContext.cpp  Logger.cpp  Logger.h  QueueManager.cpp  QueueManager.h  RClone.cpp  RClone.h  SAContext.cpp  Utility.h  VRPManager.cpp  VRPManager.h  curl_global.cpp  curl_global.h  db_utility.h  md5.h
libmloader/src/model/: GameInfo.cpp  GameInfo.h  db_model.h  db_utility.h  vehicle.h
macOS/MLoader/: ContentView.swift  Credits.rtf  MLoaderApp.swift  MainWindow.swift  SplashWindow.swift
macOS/MLoader.xcodeproj/: project.pbxproj
macOS/MLoader.xcodeproj/xcshareddata/xcschemes/: MLoader.xcscheme
macOS/MLoader/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/MLoader/Coordinators/: MainWindowCoordinator.swift
macOS/MLoader/LibFunctions/: GlobalInitialize.swift  MLoader-Bridging-Header.h
macOS/MLoader/Model/: SAdbDevice.swift  SAdbDeviceDetails.swift  SVrpApp.swift
macOS/MLoader/Utility/: CommandsMenuState.swift  Utility.swift
macOS/MLoader/Views/: AppDeviceTabView.swift  FAQDialogView.swift  VrpAppsGridView.swift  VrpAppsListView.swift
